--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
-    "watch": "bsb -make-world -w"
+    "watch": "bsb -make-world -w",
+    "test": "yarn jest"
   },
   "keywords": [
     "BuckleScript"
