--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.2",
-    "bs-platform": "^3.1.5"
+    "@glennsl/bs-jest": "^0.4.8",
+    "bs-platform": "^5.0.3"
   },
   "dependencies": {
-    "@glennsl/bs-json": "^2.0.0",
+    "@aantron/repromise": "^0.6.0",
+    "@glennsl/bs-json": "^3.0.0",
     "bn.js": "^4.11.8",
+    "bs-bn.js": "^0.0.2",
     "bs-fetch": "^0.3.0",
     "isomorphic-fetch": "^2.2.1"
   }
