--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Pelle Braendgaard <pelleb@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@glennsl/bs-jest": "^0.4.8",
     "bs-platform": "^5.0.4",
     "ganache-cli": "^6.4.3",
@@ -32,10 +33,9 @@
   "dependencies": {
     "@aantron/repromise": "^0.6.0",
     "@glennsl/bs-json": "^3.0.0",
-    "bn.js": "^4.11.8",
-    "bs-bn.js": "^0.0.2",
     "bs-fetch": "^0.3.0",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "jsbi": "^2.0.5"
   },
   "lint-staged": {
     "*.re": [
@@ -54,5 +54,10 @@
     "LICENSE",
     "__tests__/",
     "bsconfig.json"
-  ]
+  ],
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@glennsl/bs-jest|@glennsl/bs-json|bs-fetch|bs-platform|@aantron/repromise).+\\.js$"
+    ]
+  }
 }
