Upgrade @aantron/repromise to reason-promise

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -13,7 +13,7 @@
   "bs-dependencies": [
     "@glennsl/bs-json",
     "bs-fetch",
-    "@aantron/repromise"
+    "reason-promise"
   ],
   "bs-dev-dependencies": [
     "@glennsl/bs-jest"
